# ma_proper

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE BSD 2-CLAUSE.md  README.asciidoc  README.md  build.rs
helpers/: CMakeLists.txt  helpers.c
src/: lib.rs
tests/: test_metadata.rs  test_string.rs  test_vec.rs
