[package]
edition = "2018"
name = "ma_proper"
version = "0.1.4"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "A securely overwriting memory allocator"
categories = ["memory-management", "cryptography"]
keywords = ["memory-allocator", "malloc", "cryptography", "memset_s"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/ma_proper"
readme = "README.md"


[badges]
travis-ci = { repository = "KizzyCode/ma_proper" }
appveyor = { repository = "KizzyCode/ma_proper" }


[features]
default = []
trace = []
volatile_fallback = []


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true


[build-dependencies]
cc = "1.0.30"
